2020-11-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: Source the file geometry_ext.tcl - additional procedures by Manfred Rosenberger
	* geometry_ext.tcl: File with the additional procedures
	* geometry.test: Added tests for these procedures
	* math_geometry.man: Description of these procedures
	* pkgIndex.tcl: Bumped version to 1.4.1

2020-09-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: The procedures [direction] and [octant] used an inconsistent definition of the direction (see https://core.tcl-lang.org/tcllib/tktview?name=fb4812f82b).
	                The changes make the results consistent with the standard mathematical definition.
	                Further change: return the common point for adjacent line segments.
	* geometry.test: Added several tests wrt the above changes
	* pkgIndex.tcl: Bumped the version of geometry to 1.4.0, as the changes above represent a minor incompatibility.
	* geometry.man: Document these changes

2020-04-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* primes.tcl: Correct the implementation of the totient function, as per https://core.tcl-lang.org/tcllib/tktview?name=7017dad214
	* primes.test: Added a test case for the numbers 1 to 12 for the totient function
	* pkgIndex.tcl: Bumped version of numtheory to 1.1.2

2020-02-13  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* special.tcl: Add procs for returning Euler and Bernoulli number, version to 0.5.0
	* special.test: Add tests for these new procs
	* special.man: Add documentation for these new procs
	* pkgIndex.tcl: Bumped version of special functions package to 0.5.0

2019-11-08  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Add a new type of error message, version to 1.5.0
	* pdf_stat.tcl: Add procedures for Laplace, Kumaraswamy and negative binomial distributions, also tests for homoscedasticity
	* statistics.tcl: Corresponding tests
	* statistics.man: Documentation of the new procedures